# SalCore

./: .gitignore  README.md
src/: CMakeLists.txt
src/MyLibraryProject/: CMakeLists.txt  MyLibraryProject.cpp  MyLibraryProject.h
src/base_foss_core/: CMakeLists.txt  base.h  base_apr.cpp  base_apr.h  base_core.cpp  base_core.h  base_platform.h  base_types.h  base_util.cpp  base_util.h
src/base_foss_core/include/: base.h  base_apr.h  base_core.h  base_core_db.h  base_log.h  base_module_interfaces.h  base_platform.h  base_profile.h  base_scheduler.h  base_types.h  base_utils.h  base_xml.h
src/base_foss_core/include/private/: base_core_pvt.h
src/base_foss_core/src/: base_apr.c  base_core.c  base_core_db.c  base_log.c  base_profile.c  base_scheduler.c  base_utils.c  base_xml.c
src/core_base/: CMakeLists.txt
src/core_base/include/: base.h  base_apr.h  base_config.h  base_directory.h  base_module.h  base_object_adapter.h  base_path.h  base_plugin.h  base_plugin_manager.h  base_quark.h  base_strfuncs.h  base_types.h  base_util.h
src/core_base/src/: base.c  base_apr.c  base_apr.cpp  base_directory.cpp  base_path.cpp  base_plugin.cpp  base_util.cpp
src/core_main/: CMakeLists.txt  core_main.cpp  core_main.h
src/core_main/include/: core_main.h
src/core_main/src/: core_main.c  core_main.cpp
src/main/: CMakeLists.txt  main.cpp  main.h
src/thirdparty_sal/: CMakeLists.txt
src/thirdparty_sal/libbasemodule/: CMakeLists.txt
src/thirdparty_sal/libmodule/: CMakeLists.txt
src/thirdparty_sal/libmodule/include/: test.h
src/thirdparty_sal/libmodule/src/: test.c
